Explorer/wwwroot/css/site.css
html, body, app {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  width: 100%;
  height: 100%;
  background: var(--background);
  color: var(--text);
  overflow: hidden;
}

a, .btn-link {
  color: var(--link);
}

.main {
  display: flex;
  flex-flow: column;
  height: 100%;
}

/* Top row */

.main .top-row {
  height: 3.5rem;
  display: flex;
  align-items: center;
  background-color: var(--surface);
  justify-content: flex-end;
}

.main .top-row > a, .main .top-row .btn-link {
  white-space: nowrap;
  margin-left: 1.5rem;
}

.main .top-row a:first-child {
  overflow: hidden;
  text-overflow: ellipsis;
}

.main .top-row .app-logo {
  margin-right: auto;
  height: calc(100% - 1rem);
  fill: var(--logo);
}

#compile {
  padding: 0.25rem;
  color: white;
  background-color: var(--primary);
}

:root.dark-mode #compile {
  color: black;
  background-color: var(--logo);
}

.bar-icon {
  cursor: pointer;
  background: transparent;
}

:root.dark-mode .bar-icon {
  filter: invert(1);
}

.center-icon {
  display: block;
  margin: 0 auto;
}

.toast {
  margin: 0.75rem 1.5rem;
  border-radius: 0;
}

.btn {
  border-radius: 0;
}

/* Everything else */

.main .content {
  height: 90%;
  flex: 1 1 auto;
  box-sizing: border-box;
  background-color: var(--background);
}

.valid.modified:not([type=checkbox]) {
  outline: 1px solid var(--valid);
}

.invalid {
  outline: 1px solid var(--invalid);
}

.validation-message {
  color: var(--invalid);
}

#blazor-error-ui {
  background: var(--error-background);
  bottom: 0;
  box-shadow: 0 -1px 2px var(--shadow);
  display: none;
  left: 0;
  padding: 0.6rem 1.25rem 0.7rem 1.25rem;
  position: fixed;
  width: 100%;
  z-index: 1000;
}

#blazor-error-ui .dismiss {
  cursor: pointer;
  position: absolute;
  right: 0.75rem;
  top: 0.5rem;
}

/* Override reconnection view based on theme */
#components-reconnect-modal {
  background-color: var(--background) !important;
}

/* Scrollbar styling */
::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

::-webkit-scrollbar-track {
  background: var(--surface);
}

::-webkit-scrollbar-thumb {
  background: var(--accent);
}

::-webkit-scrollbar-thumb:hover {
  background: var(--text-secondary);
}

::-webkit-scrollbar-corner {
  background: transparent;
}

